[gd_scene load_steps=3 format=3 uid="uid://bengfbtjgpiwn"]

[ext_resource type="Script" uid="uid://bp42qjnuvtl05" path="res://EndScreen.gd" id="1_mo2es"]
[ext_resource type="Texture2D" uid="uid://ybobwf45gmfw" path="res://assets/you_win.png" id="2_irkl0"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_mo2es")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 585.0
offset_top = 275.0
offset_right = 625.0
offset_bottom = 315.0

[node name="ScoreLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 30.0
offset_top = -7.0
offset_right = 77.0
offset_bottom = 16.0

[node name="SecretButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = -149.0
offset_top = 295.0
offset_right = 101.0
offset_bottom = 375.0

[node name="RestartButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = -137.0
offset_top = 303.0
offset_right = 81.0
offset_bottom = 360.0
text = "Restart"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(591, 338)
scale = Vector2(0.88037366, 0.7874248)
texture = ExtResource("2_irkl0")

[connection signal="pressed" from="Control/SecretButton" to="." method="_on_secret_pressed"]
[connection signal="pressed" from="Control/RestartButton" to="." method="_on_restart_pressed"]
